# SeaBattle

./: .gitignore  CMakeLists.txt  README.md  seabattle.db
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/network/: client_network.hpp  network_worker.hpp
client/include/ui/: field_setting_page.hpp  field_widget.hpp  game_page.hpp  login_page.hpp  main_window.hpp  render_worker.hpp
client/src/: main.cpp
client/src/network/: client_network.cpp  network_worker.cpp
client/src/ui/: field_setting_page.cpp  field_widget.cpp  game_page.cpp  login_page.cpp  main_window.cpp  render_worker.cpp
client/tests/: CMakeLists.txt  test_client_network.cpp  test_field_setting_page.cpp  test_field_widget.cpp  test_game_page.cpp
server/: CMakeLists.txt  main.cpp
server/include/auth/: auth_manager.hpp
server/include/core/: cell_state.hpp  game_field.hpp  game_status.hpp  player.hpp  player_status.hpp  queue.hpp  session.hpp  session_manager.hpp  ship.hpp  shot_result.hpp
server/include/database/: database_manager.hpp
server/include/logger/: logger.hpp
server/include/network/: command_context.hpp  connection.hpp  network_manager.hpp
server/include/network/commands/: base_command.hpp  clear_field_command.hpp  disconnect_command.hpp  forfeit_command.hpp  icommand.hpp  login_command.hpp  move_command.hpp  place_ship_command.hpp  play_command.hpp  ready_command.hpp  sign_up_command.hpp  start_game_command.hpp
server/include/utils/: thread_pool.hpp
server/src/: main.cpp
server/src/auth/: auth_manager.cpp
server/src/core/: game_field.cpp  player.cpp  queue.cpp  session.cpp  session_manager.cpp
server/src/database/: database_manager.cpp
server/src/logger/: logger.cpp
server/src/network/: connection.cpp  network_manager.cpp
server/src/network/commands/: base_command.cpp  clear_field_command.cpp  disconnect_command.cpp  forfeit_command.cpp  login_command.cpp  move_command.cpp  place_ship_command.cpp  play_command.cpp  ready_command.cpp  sign_up_command.cpp  start_game_command.cpp
server/src/utils/: thread_pool.cpp
server/tests/: test_game_field.cpp  test_queue.cpp  test_session_manager.cpp
server/tests/integration/: test_database.cpp  test_session_manager.cpp
server/tests/network/: test_commands.cpp  test_protocol.cpp
server/tests/unit/: test_queue.cpp  test_session.cpp
